# EPolarization

./: .gitignore  .gitmodules  CMakeLists.txt  E-polarization.doc  JavaVsCpp.txt  Plan.txt  README.md  gui2.html  helper.h  main.cpp  test.json
EMGUI/: CMakeLists.txt  axis.cpp  axis.h  coor_converter.cpp  coor_converter.h  ellipseparamform.cpp  ellipseparamform.h  ellipseparamform.ui  emgraphicsview.cpp  emgraphicsview.h  lineparamform.cpp  lineparamform.h  lineparamform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scatterers.cpp  scatterers.h  scatterersparam.h
EMGUI/QsLog/: CMakeLists.txt
calculations/: array.h  box.h  calc_manager.cpp  calc_manager.h  curve.h  curve_package.h  discretization.cpp  discretization.h  discretize_curve.h  equation_matrix_solver.h  field_solver.cpp  field_solver.h  given.cpp  given.h  helper.cpp  helper.h  incident_field.cpp  incident_field.h  incident_field_package.cpp  incident_field_package.h  matrix.h  mt_discretization.h  point.h  prototype.h  simple_math.cpp  simple_math.h  timer.h  types.h
calculations/curves/: curve.cpp  curve.h  discretize_curve.cpp  discretize_curve.h
curves/: cubic_spline.cpp  cubic_spline.h  curve.cpp  curve.h  discretize_curve.h  ellipse.cpp  ellipse.h
gui/: CMakeLists.txt  main_window.cpp  main_window.h  moc_main_window.cxx_parameters
hpolarization/: h_core.cpp  h_core.h
math/: hankel.h  simple_math.h
mt/: calc_manager.h  parallelism.h  thread.h
patterns/: singleton.h
ui/: json_ui.cpp  json_ui.h
web2/: pom.xml
web2/src/main/java/com/simpleservlets/: Hello.java  HelloWorldServlet.java  ParabolaParam.java  Resource.java  Simple.java
web2/src/main/webapp/: gui.jsp  index.jsp
web2/src/main/webapp/WEB-INF/: web.xml
